@@ -83,4 +83,30 @@ local interface implicit
 const int protected = 0;
 const int public = 0;
 
+//
+// System as inner module.
+//
+module System
+{
+
+interface Test
+{
+    void op();
+};
+
+};
+
+};
+
+//
+// System as outer module.
+//
+module System
+{
+
+interface Test
+{
+    void op();
+};
+
 };
